# libintent

./: Cargo.toml  TODO.md
man/man1/: fs.list.1.scd  web.search.1.scd
memory/: MEMORY.md  project_libintent.md
src/: dispatcher.rs  intent.rs  lib.rs  types.rs
src/infras/: mod.rs
src/infras/fs/list/: list.rs  manifest.toml
src/infras/llm/backend/: mod.rs  ollama.rs
src/infras/llm/summarize/: summarize.rs
src/infras/llm/summary/: mod.rs  summary.rs
src/infras/web/search/: markdown_example.md  search.rs
tests/: dispatcher.rs  mod.rs
tests/infras/: mod.rs
tests/infras/fs/list/: list.rs
tests/infras/llm/: mod.rs
tests/infras/llm/backend/: mod.rs
tests/infras/llm/summarize/: mod.rs
tests/infras/llm/summary/: mod.rs
tests/infras/web/search/: search.rs
