[package]
name = "libintent"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.2", default-features = true }
tokio = { version = "1.50.0", features = ["rt-multi-thread"] }
scraper = "0.25.0"
percent-encoding = "2.3.2"
futures = "0.3"

[dev-dependencies]
serde_json = "1"
